# makebytes

./: .clang-format  CMakeLists.txt  README.md
src/: Arguments.cpp  Arguments.h  Generator.cpp  Generator.h  Main.cpp  TextWriter.cpp  TextWriter.h
